Bug 316492 - Crash when joining a chat room with no account selected
Summary: Crash when joining a chat room with no account selected
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: common-internals (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: 0.6.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-10 21:49 UTC by David Edmundson
Modified: 2013-03-11 00:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-03-10 21:49:44 UTC
Crash when joining a chat room with no account selected. 

This happened from inside plasma so there is no backtrace, searching code should be sufficient to check that account is being used when it could be null.
Comment 1 Martin Klapetek 2013-03-10 21:58:18 UTC
How about also disabling the OK button when no account is selected? OR showing a kmessagewidget "Select account first" when OK clicked and no account selected.
Comment 2 David Edmundson 2013-03-10 21:59:25 UTC
agree we should disable it.

+ add a guard against crashing anyway.
Comment 3 David Edmundson 2013-03-11 00:17:12 UTC
Git commit 2f2acee2b2b9a6281654042a3c75325c41ede44e by David Edmundson.
Committed on 10/03/2013 at 23:58.
Pushed by davidedmundson into branch 'master'.

Fix crashing in join chat room dialog

REVIEW: 109400

M  +9    -1    KTp/Widgets/join-chat-room-dialog.cpp

http://commits.kde.org/telepathy-common-internals/2f2acee2b2b9a6281654042a3c75325c41ede44e
Comment 4 David Edmundson 2013-03-11 00:18:08 UTC
I've dealt with the crash, if you want to enabling/disabling the OK button please do.