Fix crashing in join chat room dialog

REVIEW: 109400
BUG: 316492